--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "react-github-project",
-  "version": "1.0.0",
-  "description": "Create a GitHub browser using React and the GitHub API",
-  "main": "server.js",
-  "keywords": ["react","github"],
-  "author": "Ziad Saab <ziad.saab@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "dev": "webpack --watch"
+  "name": "bleh",
+  "version": "0.1.0",
+  "private": true,
+  "devDependencies": {
+    "react-scripts": "0.9.0"
   },
   "dependencies": {
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "express": "^4.14.0",
-    "jquery": "^3.1.0",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-router": "^2.6.1",
-    "webpack": "^1.13.1"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
